test_yuriiq/catalog/language/english/payment/pp_express.php
<?php

// text
$_['text_shipping_updated']	= 'Shipping service updated';
$_['text_recurring']	= '%s every %s %s';
$_['text_trial']	= '%s every %s %s for %s payments then ';
$_['text_cart']	= 'Shopping Cart';
$_['text_title']	= 'PayPal Express Checkout';
$_['text_length']	= ' for %s payments';

// error
$_['error_too_many_failures']	= 'Your payment has failed too many times';
$_['error_heading_title']	= 'There was an error';

// button
$_['button_continue']	= 'Continue';

// express
$_['express_button_confirm']	= 'Confirm';
$_['express_text_title']	= 'Confirm order';
$_['express_entry_coupon']	= 'Enter your coupon here:';
$_['express_button_coupon']	= 'Add';
$_['express_button_shipping']	= 'Update shipping';
$_['express_button_login']	= 'Continue to PayPal';
?>